test pac proxy and fix shift

--- a/src/renderer/src/shift.css
+++ b/src/renderer/src/shift.css
@@ -6,16 +6,38 @@
   padding: 2px;
   font-size: 1.6vw;
   display: flex;
-  flex-direction: column;
+  flex-direction: row-reverse;
   align-items: center;
+  justify-content: center;
   color: aliceblue;
   background-color: rgba(0, 0, 0, 0.25);
 }
-
+.shiftblock {
+  font-size: 3.5vw;
+  font-weight: 800;
+  color: #fff;
+}
+.number {
+  color: #fff;
+}
 .child_block {
 }
 
 #sekarang {
   background-color: #0093e9;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+}
+.block_child_block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: 600;
+  font-size: 1.5vw;
+}
+
+#nextshift {
+  font-size: 1.3em;
+  font-weight: 300;
+  color: rgb(150, 150, 150);
+  margin-left: 20px;
 }
